--- a/src/app/shared/ui/svg-icon/svg-icon.component.scss
+++ b/src/app/shared/ui/svg-icon/svg-icon.component.scss
@@ -1,5 +1,8 @@
 :host {
-  display: inline-block;
+  display: grid;
+  place-items: center;
+  width: 100%;
+  height: 100%;
 }
 svg {
   display: block;
