update styles in contact page

--- a/src/app/features/contact/components/contact-info/contact-info.component.html
+++ b/src/app/features/contact/components/contact-info/contact-info.component.html
@@ -1,5 +1,5 @@
 <div class="contact-section">
-  <h1 class="contact-title">Contact</h1>
+  <h1 class="contact-title"><span class="title-gradient">Contact</span></h1>
 
   <div class="contact-content">
     <p class="contact-description">
