--- a/src/app/features/contact/components/social-media-info/social-media-info.component.html
+++ b/src/app/features/contact/components/social-media-info/social-media-info.component.html
@@ -1,5 +1,5 @@
   <div class="social-section">
-    <h2 class="section-title">Social Media</h2>
+    <h2 class="section-title"><span class="title-gradient">Social Media</span></h2>
     <p class="section-description">
       If you want to find me on social media, maybe you can't find me hehe. I usually change my username on almost all platforms, 
       so it could be a bit hard find me, sorry.
