--- a/src/app/features/contact/containers/contact/contact.component.html
+++ b/src/app/features/contact/containers/contact/contact.component.html
@@ -1,10 +1,7 @@
-<app-floating-island-background [imageUrl]="imageUrl()" [isDarkTheme]="false" />
+<app-floating-island-background [imageUrl]="imageUrl()" [isDarkTheme]="true" />
 <div class="page-container">
-  <app-toc [sections]="tocSections"></app-toc>
   <section class="content-container">
     <app-contact-info [contactInfo]="contactInfo()"></app-contact-info>
-    <app-social-media-info
-      [socialMediaInfo]="socialMediaInfo()"
-    ></app-social-media-info>
+    <app-social-media-info [socialMediaInfo]="socialMediaInfo()"></app-social-media-info>
   </section>
 </div>
