--- a/src/styles/abstracts/_variables.scss
+++ b/src/styles/abstracts/_variables.scss
@@ -8,7 +8,7 @@
   --content-padding-mobile: 1.5rem;
 
   // General Colors
-  --color-primary: #4f46e5;
+  --color-primary: #9976e6;
   --color-primary-rgb: 79, 70, 229;
   --color-secondary: #fe8198;
   --color-secondary-rgb: 254, 129, 152;
