--- a/src/app/features/contact/components/social-media-info/social-media-info.component.html
+++ b/src/app/features/contact/components/social-media-info/social-media-info.component.html
@@ -5,7 +5,7 @@
       so it could be a bit hard find me, sorry.
     </p>
     <p class="section-description">
-      For the same, I've included direct links to the platforms I use most frequently:
+      I've included direct links to the platforms I use sometimes:
     </p>
     <app-table-content
       [headers]="socialMediaInfo().headers"
