--- a/src/app/shared/layout/floating-island-background/floating-island-background.component.html
+++ b/src/app/shared/layout/floating-island-background/floating-island-background.component.html
@@ -1,13 +1,13 @@
 <div class="background-wrapper" [class.dark-theme]="isDarkTheme()">
   @if (isDarkTheme()) {
   <img
-   [src]="imageUrl() + '-dark.png'"
+   [src]="imageUrl() + '-dark.webp'"
     alt="Floating Island Background"
     class="floating-island"
   />
   } @else{
   <img
-    [src]="imageUrl() + '.png'"
+    [src]="imageUrl() + '.webp'"
     alt="Floating Island Background"
     class="floating-island"
   />}
