update routes and add not found page

--- a/src/app/features/blog/containers/blog/blog.component.html
+++ b/src/app/features/blog/containers/blog/blog.component.html
@@ -1,1 +1,4 @@
-<p>blog works!</p>
+<section class="blog-coming-soon">
+  <h1 class="blog-title">Blog Coming Soon</h1>
+  <p class="blog-message">I'm working on it! This section will be available soon. Stay tuned for updates and articles.🐢</p>
+</section>
