--- a/src/app/features/home/components/hero/hero.component.html
+++ b/src/app/features/home/components/hero/hero.component.html
@@ -2,7 +2,9 @@
   <div class="hero-content" appScrollReveal [delay]="0">
     <!-- Solo una animación por contenedor -->
     <h1 class="hero-title">
-      Hi there, I'm <span class="highlight">Claudio Ríos</span>
+      Hi there,
+      <br />
+      I'm <span class="highlight">Claudio Ríos</span>
     </h1>
 
     <p class="hero-description">
@@ -27,10 +29,6 @@
   </div>
 
   <div class="hero-visual" appScrollReveal [delay]="200">
-    <!-- <app-animated-avatar
-    [sensitivity]="20" 
-    [clickEffect]="true"
-  ></app-animated-avatar> -->
     <div class="hero-content">
       <app-profile-image
         imageUrl="images/profile-ttt.webp"
