--- a/src/styles/abstracts/_variables.scss
+++ b/src/styles/abstracts/_variables.scss
@@ -137,7 +137,7 @@
   --color-toggle-bg: #e0e0e0;
   --color-toggle-thumb: #ffffff;
   --color-sun-icon: #f59e0b;
-  --color-moon-icon: #6366f1;
+  --color-moon-icon: #5d5ff4;
   --header-bg: rgba(255, 255, 255, 0.588);
   --header-bg-mobile: rgb(255, 255, 255);
   --blur-amount: 10px;
@@ -225,7 +225,7 @@
   --color-toggle-bg: #444444;
   --color-toggle-thumb: #222222;
   --color-sun-icon: #fbbf24;
-  --color-moon-icon: #41528f;
+  --color-moon-icon: #5d5ff4;
   --header-bg: rgba(19, 18, 30, 0.451);
   --header-bg-mobile: rgba(19, 18, 30, 0.97);
 }
