--- a/src/app/shared/ui/animated-avatar/animated-avatar.component.html
+++ b/src/app/shared/ui/animated-avatar/animated-avatar.component.html
@@ -1,3 +1,3 @@
 <div class="avatar-container" [style]="transformStyle">
-   <img src="/images/main.svg" alt="Avatar" class="hero-avatar" />
+   <img [src]="isDark ? '/images/main-dark.svg' : '/images/main.svg'" alt="Avatar" class="hero-avatar" />
 </div>
